--- a/contact us.html
+++ b/contact us.html
@@ -7,27 +7,37 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
-    <body style="background-color:#f0e442;">
-             <nav class="navbar navbar-inverse">
+    <body style="background-color:#f0e442; margin-bottom:70; margin-top:70;">
+         <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a  id="name" class="navbar-brand" href="#">Hogwarts</a>
-        <br>
-        <br>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hogwarts</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="contact%20us.html">Contact Us</a></li>
-    </ul>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="contact%20us.html">Contact Us</a></li>
+        <li><a href="experiences.html">Campus Life</a></li>
+          <li><a href="achievements.html">Achievements</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
-        <center>
-                <p style="font-size:100">Contact Us<br>
+<center>
+        <img width="50%"
+src="https://th.bing.com/th/id/R.f3aab6dfb1d3939a1c89270a58691982?rik=hSSbbKrUVROnig&riu=http%3a%2f%2fcdn.wallpapersafari.com%2f69%2f16%2f4Iva30.jpg&ehk=XayEWBORLhoxQvY9kgSzn9GlKgeXTn0Qbgbrp7X5obg%3d&risl=&pid=ImgRaw"> 
+                <p style="font-size:80">Contact Us<br>
                 <svg height="30" width="500">
   <line x1="155" y1="10" x2="345" y2="10" style="stroke:rgb(0,0,0);stroke-width:10" />
 </svg>
                 </p>
-               <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83.14101582719013!2d-81.47383318476597!3d28.471817764370556!2m3!1f23!2f30.690718607396832!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88e77f1e4931082f%3A0xa2250592e2bbf3bd!2sHogwarts%20Castle!5e1!3m2!1sen!2sus!4v1625530768321!5m2!1sen!2sus" width="90%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+              <h3>jrowling@scholastic.com</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d83.14101582719013!2d-81.47383318476597!3d28.471817764370556!2m3!1f23!2f30.690718607396832!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x88e77f1e4931082f%3A0xa2250592e2bbf3bd!2sHogwarts%20Castle!5e1!3m2!1sen!2sus!4v1625530768321!5m2!1sen!2sus" width="90%" height="390" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 <br>
                 <br>
             </center>
