--- a/index.html
+++ b/index.html
@@ -7,27 +7,40 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
-    <body style="background-color:#f0e442;">
-   <nav class="navbar navbar-inverse">
+    <body style="background-color:#f0e442; margin-bottom:70; margin-top:70;">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a  id="name" class="navbar-brand" href="#">Hogwarts</a>
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Hogwarts</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="contact us.html">Contact Us</a></li>
-    </ul>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="contact%20us.html">Contact Us</a></li>
+        <li><a href="experiences.html">Campus Life</a></li>
+          <li><a href="achievements.html">Achievements</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
-        <center>
-        <img width="100%"
-             height="75%"
+       <center>
+        <img width="50%"
 src="https://th.bing.com/th/id/R.f3aab6dfb1d3939a1c89270a58691982?rik=hSSbbKrUVROnig&riu=http%3a%2f%2fcdn.wallpapersafari.com%2f69%2f16%2f4Iva30.jpg&ehk=XayEWBORLhoxQvY9kgSzn9GlKgeXTn0Qbgbrp7X5obg%3d&risl=&pid=ImgRaw"> 
-<h4 style="margin-right:50; margin-left:50;">
+         <p style="font-size:80">Homepage<br>
+                <svg height="30" width="500">
+  <line x1="155" y1="10" x2="345" y2="10" style="stroke:rgb(0,0,0);stroke-width:10" />
+</svg>
+    </p>
+<h3 style="padding:30">
     Hogwarts is a wondrous, magical building with many towers and turrets. It is home to Hogwarts School of Witchcraft and Wizardry. I find Hogwarts location, its castle, the grounds, and Quiddich fascinating. Hogwarts is built in a forested area said to be in Scotland. The castle is located atop a cliff overlooking a lake. The lake is south of the castle and the front entrance of the castle faces toward the west. There is a small underground inlet, its entrance hidden by hanging ivy, that leads to a stony beach below the castle at the base of the cliff. From there, a path leads up to the front door of the castle. A road runs around the lake to the…show more content…
 Hagrid’s cabin is located on the edge of the Forbidden Forrest. Quidditch Field is on the opposite side of Hogwarts from the Forbidden Forrest.  There is a lake located south of the castle and is approximately a half mile in diameter. Giant Squids, Merfolk, and Grindylows live in this lake. Quidditch is big at Hogwarts. Each House fields a team, which includes the seven players and often one or two reserve players as well. The teams have a team captain who not only plays but also acts as coach. The captain leads practices, devises strategies, and sees to the induction of new players into the team. Quidditch tryouts are typically during the second week of the school year, although the exact day and time are up to the captain to determine; students who wish to play for their Houses are asked to talk to Madam Hooch. The Quidditch season at Hogwarts starts in October, with the first games early in November. Madam Hooch is the resident Quidditch expert. The Bludgers, Quaffles, and Snitch are stored securely in her office between games and she acts as referee for the matches. Team practices are scheduled by individual captains. Most teams practice almost every day, after school or in the evenings.
    
-        </h4>
+        </h3>
         </center>
     </body>
 </html>
