--- a/achievements.html
+++ b/achievements.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Hogwarts</title>
+    <title>Achievements</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -24,6 +24,7 @@
         <li><a href="contact%20us.html">Contact Us</a></li>
         <li><a href="experiences.html">Campus Life</a></li>
           <li><a href="achievements.html">Achievements</a></li>
+          <li><a href="what%20is%20new.html">What's New</a></li>
       </ul>
     </div>
   </div>
