--- a/experiences.html
+++ b/experiences.html
@@ -1,13 +1,14 @@
 <html>
 <head>
-     <meta charset="utf-8">
+     <title>Campus Life in Hogwarts</title>
+    <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body style="background-color:#f0e442; margin-bottom:70; margin-top:70;">
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+ <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -23,6 +24,7 @@
         <li><a href="contact%20us.html">Contact Us</a></li>
         <li><a href="experiences.html">Campus Life</a></li>
           <li><a href="achievements.html">Achievements</a></li>
+          <li><a href="what%20is%20new.html">What's New</a></li>
       </ul>
     </div>
   </div>
