--- a/experiences.html
+++ b/experiences.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-     <title>Campus Life in Hogwarts</title>
+     <title>Campus Life</title>
     <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body style="background-color:#f0e442; margin-bottom:70; margin-top:70;">
- <nav class="navbar navbar-inverse navbar-fixed-top">
+  <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -25,12 +25,13 @@
         <li><a href="experiences.html">Campus Life</a></li>
           <li><a href="achievements.html">Achievements</a></li>
           <li><a href="what%20is%20new.html">What's New</a></li>
+          <li><a href="alumni.html">Our Alumni</a></li>
       </ul>
     </div>
   </div>
 </nav>
      <center>  
-    <img width="50%"
+    <img width="200"
 src="https://th.bing.com/th/id/R.f3aab6dfb1d3939a1c89270a58691982?rik=hSSbbKrUVROnig&riu=http%3a%2f%2fcdn.wallpapersafari.com%2f69%2f16%2f4Iva30.jpg&ehk=XayEWBORLhoxQvY9kgSzn9GlKgeXTn0Qbgbrp7X5obg%3d&risl=&pid=ImgRaw"> 
             <p style="font-size:80">Campus Life<br>
                 <svg height="30" width="500">
@@ -44,19 +45,19 @@ src="https://th.bing.com/th/id/R.f3aab6dfb1d3939a1c89270a58691982?rik=hSSbbKrUVR
     <div class="item active">
        <h1>School Library</h1>
         <img src="https://th.bing.com/th/id/R.085f21809046573290c33d04d709a5d0?rik=VPnXWhRFz2rkKA&riu=http%3a%2f%2fcdn.koreaboo.com%2fwp-content%2fuploads%2f2017%2f06%2fhogwartslibrary.jpg&ehk=uhABK1o7zlbxp%2boros9AFM8wo8h135RV4KqGov3SfDw%3d&risl=&pid=ImgRaw"  width="50%" height="33%" >
-        <h4 style="padding:50px; padding-top:20px; padding-bottom:20px;">The Great Hall in the Hogwarts Castle was the main gathering area in the school, which is located off the Entrance Hall. It is a large hall where students and teachers dined and congregated. Three meals a day are hosted in this hall.</h4>
+        <h4 style="padding:50px; padding-top:20px; padding-bottom:20px;">The Great Hall in the Hogwarts Castle was the main gathering area in the school, which is <br>located off the Entrance Hall. It is a large hall where students and teachers dined and congregated. Three meals <br>a day are hosted in this hall.</h4>
     </div>
     <div class="item">
       <h1>Great Hall during Halloween</h1>
         <img height="728" class="d-block w-100" src="https://th.bing.com/th/id/OIP.kIe0LDL09eWEz8NLXGGvXwHaE8?w=250&h=180&c=7&o=5&dpr=2&pid=1.7" alt="Third slide" width="50%" height="33%" >
-        <h4 style="padding:50px; padding-top:20px; padding-bottom:20px;">The Hogwarts Library is located off of a corridor on the first-floor of Hogwarts Castle and contains tens of thousands of books on thousands of shelves. Overseen by Madam Irma Pince, the library is where students could go to peruse or borrow books to supplement their studies (or for personal enjoyment).
+        <h4 style="padding:50px; padding-top:20px; padding-bottom:20px;">The Hogwarts Library is located off of a corridor on the first-floor of Hogwarts Castle and contains tens of <br>thousands of books on thousands of shelves. Overseen by Madam Irma Pince, the library is where students could go to peruse or <br>borrow books to supplement their studies (or for personal enjoyment).
 </h4>
     </div>
             <div class="item">
            <h1>Common Rooms</h1>
                 <img src="https://vignette.wikia.nocookie.net/harrypotter/images/9/9e/Common_Room_movie.jpg/revision/latest?cb=20181023080201"  width="50%" height="33%" >
                 <h4 style="padding:50px; padding-top:20px; padding-bottom:20px;">
-                A common room is a shared lounge area in Hogwarts School of Witchcraft and Wizardry. There is one for each house. (Houses in Hogwarts are four different classifications of students. The student is classified for their personality.) The common rooms feature fireplaces and sitting areas and are decorated in house colours. They are often used to do homework and to socialise with housemates.
+                A common room is a shared lounge area in Hogwarts School of Witchcraft and Wizardry. There is one for each house. (Houses <br>in Hogwarts are four different classifications of students. The student is classified <br>for their personality.) The common rooms feature fireplaces and sitting areas and are decorated <br>in house colours. They are often used to do homework and to socialise with housemates.
                 </h4>
             </div>
   </div>
