--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Hogwarts Home Page</title>
+    <title>Hogwarts Homepage</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     </head>
     <body style="background-color:#f0e442; margin-bottom:70; margin-top:70;">
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+   <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -25,12 +25,13 @@
         <li><a href="experiences.html">Campus Life</a></li>
           <li><a href="achievements.html">Achievements</a></li>
           <li><a href="what%20is%20new.html">What's New</a></li>
+          <li><a href="alumni.html">Our Alumni</a></li>
       </ul>
     </div>
   </div>
 </nav>
        <center>
-        <img width="50%"
+        <img width="200"
 src="https://th.bing.com/th/id/R.f3aab6dfb1d3939a1c89270a58691982?rik=hSSbbKrUVROnig&riu=http%3a%2f%2fcdn.wallpapersafari.com%2f69%2f16%2f4Iva30.jpg&ehk=XayEWBORLhoxQvY9kgSzn9GlKgeXTn0Qbgbrp7X5obg%3d&risl=&pid=ImgRaw"> 
          <p style="font-size:80">Homepage<br>
                 <svg height="30" width="500">
